--- a/index.css
+++ b/index.css
@@ -1,13 +1,18 @@
-#main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+flex-direction: column;
+align-items: center;
 }
 
 #github-container {
-  display: flex;
+display: flex;
 }
 
 ul {
-  list-style: none;
+list-style: none;
+}
+li{
+margin-bottom: 5px;
+}
+#user-list li{
+border: 1px solid blue;
+background-color: rgb(218, 211, 211);
 }
